--- a/src/app/baustellen-liste/baustelle-liste.component.html
+++ b/src/app/baustellen-liste/baustelle-liste.component.html
@@ -1,9 +1,9 @@
 <h1>Baustellen Liste</h1>
 
-@if (mockData$ | async; as mockData) {
+@if (mockDataList$ | async; as mockData) {
   <table mat-table [dataSource]="mockData">
 
-    <ng-container matColumnDef="id_column">
+    <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef>id</th>
       <td mat-cell *matCellDef="let element"> {{ element.id }}</td>
     </ng-container>
@@ -14,6 +14,6 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row (click)="onClickRow(row)" *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 }
