feat: new datamodel

--- a/src/app/baustellen-liste/baustelle/baustelle.component.html
+++ b/src/app/baustellen-liste/baustelle/baustelle.component.html
@@ -13,8 +13,8 @@
           <td>{{ mockData.name }}</td>
         </tr>
         <tr>
-          <td>Beschreibung</td>
-          <td>{{ mockData.description }}</td>
+          <td>Status</td>
+          <td>{{ mockData.status }}</td>
         </tr>
         <tr>
           <td>Karte</td>
