add leaflet map

--- a/src/app/baustellen-liste/baustelle/baustelle.component.html
+++ b/src/app/baustellen-liste/baustelle/baustelle.component.html
@@ -1,27 +1,31 @@
 <h1>Baustelle</h1>
 @if (mockData$ | async; as mockData) {
-  <mat-card>
-    <mat-card-content>
-      <table class="main-table">
-        <tbody>
-        <tr>
-          <td>Id</td>
-          <td>{{ mockData.id }}</td>
-        </tr>
-        <tr>
-          <td>Name</td>
-          <td>{{ mockData.name }}</td>
-        </tr>
-        <tr>
-          <td>Status</td>
-          <td>{{ mockData.status }}</td>
-        </tr>
-        <tr>
-          <td>Karte</td>
-          <img ngSrc="{{ mockData.imageUrl }}" width="400" height="300" alt="Karte"/>
-        </tr>
-        </tbody>
-      </table>
-    </mat-card-content>
-  </mat-card>
+    <mat-card>
+        <mat-card-content>
+            <table class="main-table">
+                <tbody>
+                <tr>
+                    <td>Id</td>
+                    <td>{{ mockData.id }}</td>
+                </tr>
+                <tr>
+                    <td>Name</td>
+                    <td>{{ mockData.name }}</td>
+                </tr>
+                <tr>
+                    <td>Status</td>
+                    <td>{{ mockData.status }}</td>
+                </tr>
+                <tr>
+                    <td>Karte</td>
+                    <app-map *ngIf="hasGeoPosition(mockData.geoPosition)"
+                             [latitude]="getGeoPosition(mockData.geoPosition!).lat"
+                             [longitude]="getGeoPosition(mockData.geoPosition!).lng" />
+                    <img *ngIf="!hasGeoPosition(mockData.geoPosition)" ngSrc="{{ mockData.imageUrl }}" width="400"
+                         height="300" alt="Karte"/>
+                </tr>
+                </tbody>
+            </table>
+        </mat-card-content>
+    </mat-card>
 }
