--- a/src/app/baustellen-liste/baustelle-liste.component.html
+++ b/src/app/baustellen-liste/baustelle-liste.component.html
@@ -2,7 +2,7 @@
 
 @if (mockDataList$ | async; as mockData) {
     <table mat-table [dataSource]="mockData">
-
+        <tbody>
         <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef>id</th>
             <td mat-cell *matCellDef="let element"> {{ element.id }}</td>
@@ -15,5 +15,6 @@
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row (click)="onClickRow(row)" *matRowDef="let row; columns: displayedColumns;"></tr>
+        </tbody>
     </table>
 }
