--- a/src/app/baustellen-liste/baustelle/restriction/restriction.component.html
+++ b/src/app/baustellen-liste/baustelle/restriction/restriction.component.html
@@ -2,42 +2,38 @@
     <tbody>
     <tr>
         <td>
-            @for (restriction of capacityRestrictions ?? []; track restriction.id) {
-                <table>
-                    <tbody>
-                    <tr>
-                        <td>Date</td>
-                        <td>{{ restriction.startDate }} - {{ restriction.endDate }}</td>
-                    </tr>
-                    <tr>
-                        <td>AffectedRoute</td>
-                        <td>{{ restriction.affectedRoute }}</td>
-                    </tr>
-                    <tr>
-                        <td>Milage</td>
-                        <td>{{ restriction.startMilage }} - {{ restriction.endMilage }}</td>
-                    </tr>
-                    <tr>
-                        <td>type</td>
-                        <td>{{ restriction.type }}</td>
-                    </tr>
-                    <tr>
-                        <td>status</td>
-                        <td>{{ restriction.status }}</td>
-                    </tr>
-                    <tr>
-                        <table class="striped-table">
-                            <tr>
-                                <td>Restrictions:</td>
-                                <td>
-                                    <app-measure [measures]="restriction.measures"/>
-                                </td>
-                            </tr>
-                        </table>
-                    </tr>
-                    </tbody>
-                </table>
-            }
+            <table>
+                <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>AffectedRoute</th>
+                    <th>Milage</th>
+                    <th>Type</th>
+                </tr>
+                </thead>
+                <tbody>
+                    @for (restriction of capacityRestrictions ?? []; track restriction.id) {
+                        <tr>
+
+                            <td>{{ restriction.startDate }} - {{ restriction.endDate }}</td>
+                            <td>{{ restriction.affectedRoute }}</td>
+                            <td>{{ restriction.startMilage }} - {{ restriction.endMilage }}</td>
+                            <td>{{ restriction.type }}</td>
+                            <td>{{ restriction.status }}</td>
+                        </tr>
+                        <tr>
+                            <table class="striped-table">
+                                <tr>
+                                    <td>Restrictions:</td>
+                                    <td>
+                                        <app-measure [measures]="restriction.measures"/>
+                                    </td>
+                                </tr>
+                            </table>
+                        </tr>
+                    }
+                </tbody>
+            </table>
         </td>
     </tr>
     </tbody>
