added some basic bad styling :)

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,2 +1,7 @@
-<div id="map" style="height: 400px; width: 500px"></div>
+<div id="map" style="
+position: absolute;
+  top: 40px;
+  bottom: 0;
+  min-width: 566px;
+"></div>
 
