--- a/src/app/baustellen-liste/baustelle-liste.component.html
+++ b/src/app/baustellen-liste/baustelle-liste.component.html
@@ -1,26 +1,26 @@
-<mat-card>
+<mat-card class="baustellen-card">
     <mat-card-header>
         <mat-card-title>Baustellen</mat-card-title>
     </mat-card-header>
 
     <mat-card-content>
         @if (mockDataList$ | async; as mockData) {
-            <table mat-table [dataSource]="mockData">
-                <tbody>
-                <ng-container matColumnDef="id">
-                    <th mat-header-cell *matHeaderCellDef>id</th>
-                    <td mat-cell *matCellDef="let element"> {{ element.id }}</td>
-                </ng-container>
+        <table mat-table [dataSource]="mockData" class="mat-elevation-z2 baustellen-table">
 
-                <ng-container matColumnDef="name">
-                    <th mat-header-cell *matHeaderCellDef>name</th>
-                    <td mat-cell *matCellDef="let element"> {{ element.name }}</td>
-                </ng-container>
+            <ng-container matColumnDef="id">
+                <th mat-header-cell *matHeaderCellDef>Id</th>
+                <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+            </ng-container>
 
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row (click)="onClickRow(row)" *matRowDef="let row; columns: displayedColumns;"></tr>
-                </tbody>
-            </table>
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef>Name</th>
+                <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onClickRow(row)" class="baustellen-row">
+            </tr>
+        </table>
         }
     </mat-card-content>
 </mat-card>
