--- a/src/app/baustellen-liste/baustelle/baustelle.component.html
+++ b/src/app/baustellen-liste/baustelle/baustelle.component.html
@@ -1,55 +1,63 @@
-<mat-card>
-    <mat-card-header>
-        <mat-card-title>Baustelle</mat-card-title>
-    </mat-card-header>
+<div class="container">
 
-    <mat-card-content>
-        @if (constructionDossier$ | async; as constructionDossier) {
-            <table class="main-table">
-                <tbody>
-                <tr>
-                    <td>Id</td>
-                    <td>{{ constructionDossier.id }}</td>
-                    <td rowspan="4">
-                        @if (getGeoPosition(constructionDossier.geoPosition); as geo) {
-                            <app-map
-                                [latitude]="geo.lat"
-                                [longitude]="geo.lng"/>
-                        }
-                    </td>
-                </tr>
-                <tr>
-                    <td>Name</td>
-                    <td>{{ constructionDossier.name }}</td>
-                </tr>
-                <tr>
-                    <td>Date</td>
-                    <td>{{ constructionDossier.startDate | formatDateTime }}
-                        - {{ constructionDossier.endDate | formatDateTime }}
-                    </td>
-                </tr>
-                <tr>
-                    <td>Affected Sections</td>
-                    <td>{{ constructionDossier.affectedSection }}</td>
-                </tr>
-                <tr>
-                    <td>Status</td>
-                    <td>{{ constructionDossier.status }}</td>
-                </tr>
-                </tbody>
-            </table>
-        }
+    <mat-card class="baustelle-card">
+        <mat-card-header>
+            <mat-card-title>Baustelle Details</mat-card-title>
+        </mat-card-header>
 
-        <mat-card>
-            <mat-card-header>
-                <mat-card-title>Baustelle</mat-card-title>
-            </mat-card-header>
-            <mat-card-content>
-                @if (constructionDossier$ | async; as constructionDossier) {
-                    <app-restriction [capacityRestrictions]="constructionDossier.restrictions"/>
-                }
-            </mat-card-content>
-        </mat-card>
+        <mat-card-content>
+            @if (constructionDossier$ | async; as constructionDossier) {
+            <div class="baustelle-details">
+                <table class="main-table">
+                    <tbody>
+                        <tr>
+                            <td class="label">Id</td>
+                            <td>{{ constructionDossier.id }}</td>
 
-    </mat-card-content>
-</mat-card>
+                        </tr>
+                        <tr>
+                            <td class="label">Name</td>
+                            <td>{{ constructionDossier.name }}</td>
+                        </tr>
+                        <tr>
+                            <td class="label">Date</td>
+                            <td>
+                                From: {{ constructionDossier.startDate | formatDateTime }}<br />
+                                To: {{ constructionDossier.endDate | formatDateTime }}
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="label">Affected Sections</td>
+                            <td>{{ constructionDossier.affectedSection }}</td>
+                        </tr>
+                        <tr>
+                            <td class="label">Status</td>
+                            <td colspan="2">
+                                <span class="status-chip">{{ constructionDossier.status }}</span>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="restrictions-section">
+                <h3>Kapazitätsbeschränkungen</h3>
+                <app-restriction [capacityRestrictions]="constructionDossier.restrictions" />
+            </div>
+            }
+        </mat-card-content>
+    </mat-card>
+
+    <mat-card class="baustelle-card">
+        <mat-card-header>
+            <mat-card-title>Map</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            @if (constructionDossier$ | async; as constructionDossier) {
+            @if (getGeoPosition(constructionDossier.geoPosition); as geo) {
+            <app-map [latitude]="geo.lat" [longitude]="geo.lng" />
+            }
+            }
+        </mat-card-content>
+    </mat-card>
+
+</div>
