re-added accidentally deleted link to toolbar button

--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -4,8 +4,8 @@
 
         <span class="example-spacer"></span>
         
-        <button mat-button >Baustellen</button>
-
+        <button [routerLink]="'./baustelle'" mat-button routerLinkActive='nav-selected'>Baustellen
+        </button>
         <button [routerLink]="'./about'" mat-button routerLinkActive='nav-selected'>About
         </button>
     </mat-toolbar-row>
