feat: about - add Company

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,10 +1,10 @@
 <h1>Team: Nutzt KI</h1>
 <ul>
-    <li>Isabella Messinger</li>
-    <li>Jörg Junge</li>
-    <li>Marco Kaempgen</li>
-    <li>Robin Schmid</li>
-    <li>Tamás Béres</li>
-    <li>Thomas Bomatter</li>
-    <li>Vincent Gerber</li>
+    <li>Isabella Messinger - ÖBB</li>
+    <li>Jörg Junge - DB</li>
+    <li>Marco Kaempgen - ÖBB</li>
+    <li>Robin Schmid - SBB</li>
+    <li>Tamás Béres - ÖBB</li>
+    <li>Thomas Bomatter - SBB</li>
+    <li>Vincent Gerber - ÖBB</li>
 </ul>
