--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,11 +3,11 @@ html {
     @include mat.theme(
         (
             color: (
-                primary: mat.$violet-palette,
+                primary: mat.$azure-palette,
                 tertiary: mat.$orange-palette,
                 theme-type: light
             ),
-            typography: Roboto,
+            typography: Open Sans,
             density: 0
         )
     );
