--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,7 +2,7 @@
 <ul>
     <li>Isabella Messinger - ÖBB</li>
     <li>Jörg Junge - DB</li>
-    <li>Marco Kaempgen - ÖBB</li>
+    <li>Marco Kämpgen - ÖBB</li>
     <li>Robin Schmid - SBB</li>
     <li>Tamás Béres - ÖBB</li>
     <li>Thomas Bomatter - SBB</li>
