--- a/src/app/baustellen-liste/baustelle/restriction/restriction.component.html
+++ b/src/app/baustellen-liste/baustelle/restriction/restriction.component.html
@@ -6,7 +6,7 @@
                 <thead>
                 <tr>
                     <th>Date</th>
-                    <th>AffectedRoute</th>
+                    <th>Affected<br>Route</th>
                     <th>Milage</th>
                     <th>Type</th>
                     <th>Status</th>
@@ -28,7 +28,7 @@
                             <td [colSpan]="6">
                                 <table class="striped-table">
                                     <tr>
-                                        <td>Restrictions:</td>
+                                        <td>&nbsp;&nbsp;&nbsp;</td>
                                         <td>
                                             <app-measure [measures]="restriction.measures"/>
                                         </td>
