--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,9 +1,9 @@
 <mat-toolbar class="toolbar-format">
     <mat-toolbar-row class="nav-width">
-        <img src="buildconnectlogo.png" alt="Logo" />
+        <img alt="Logo" src="buildconnectlogo.png"/>
 
         <span class="example-spacer"></span>
-        
+
         <button [routerLink]="'./baustelle'" mat-button routerLinkActive='nav-selected'>Baustellen
         </button>
         <button [routerLink]="'./about'" mat-button routerLinkActive='nav-selected'>About
