--- a/src/app/baustellen-liste/baustelle-liste.component.html
+++ b/src/app/baustellen-liste/baustelle-liste.component.html
@@ -5,22 +5,23 @@
 
     <mat-card-content>
         @if (mockDataList$ | async; as mockData) {
-        <table mat-table [dataSource]="mockData" class="mat-elevation-z2 baustellen-table">
+            <table mat-table [dataSource]="mockData" class="mat-elevation-z2 baustellen-table">
 
-            <ng-container matColumnDef="id">
-                <th mat-header-cell *matHeaderCellDef>Id</th>
-                <td mat-cell *matCellDef="let element">{{ element.id }}</td>
-            </ng-container>
+                <ng-container matColumnDef="id">
+                    <th mat-header-cell *matHeaderCellDef>Id</th>
+                    <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+                </ng-container>
 
-            <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef>Name</th>
-                <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-            </ng-container>
+                <ng-container matColumnDef="name">
+                    <th mat-header-cell *matHeaderCellDef>Name</th>
+                    <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+                </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onClickRow(row)" class="baustellen-row">
-            </tr>
-        </table>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onClickRow(row)"
+                    class="baustellen-row">
+                </tr>
+            </table>
         }
     </mat-card-content>
 </mat-card>
